# blankon-upgrade

./: DESIGN.md  README.md  id.or.blankonlinux.upgrade.json  meson.build
.github/workflows/: bundle.yml
data/: id.or.blankonlinux.upgrade.appdata.xml.in  id.or.blankonlinux.upgrade.desktop.in  id.or.blankonlinux.upgrade.gschema.xml  meson.build
po/: POTFILES  meson.build
scripts/: check.sh  prepare.sh  upgrade.sh
src/: blankon_upgrade.gresource.xml  main.vala  meson.build  window.ui  window.vala
src/ui/: app.vala  upgrade.vala
src/widgets/: headerbar.vala
